--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <p class="text-muted mb-0"><span class="glyphicon glyphicon-scissors"></span> Mobil frisør for hele familien i hele Odense
+
+</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -96,8 +98,7 @@
           </div>
         </div>
       </div>
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Billeder af udvalgte klipninger</a>
           </div>
         </div>
       </div>
