--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">Mobil frisør</h3>
-              <p class="text-muted mb-0"><span class="glyphicon glyphicon-scissors"></span> For hele familien i hele Odense
+              <p><span class="glyphicon glyphicon-scissors"></span> For hele familien i hele Odense
 
 </p>
             </div>
